# pinpoint-wcs2

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  PinpointWCS.pro  README.md  main.cpp  pinpointwcs-crossplatform.pro
adobexmp/: .gitignore  CMakeLists.txt
backend/: ComputeWCS.cpp  ComputeWCS.h  CoordinateDelegate.cpp  CoordinateDelegate.h  CoordinateModel.cpp  CoordinateModel.h  DS9Thread.cpp  DS9Thread.h  EpoImage.cpp  EpoImage.h  ExportWCS.cpp  ExportWCS.h  FITSThread.cpp  FITSThread.h  FitsImage.cpp  FitsImage.h  PPWcsImage.cpp  PPWcsImage.h  PinpointWCSUtils.cpp  PinpointWCSUtils.h  RemoteData.cpp
cmake/modules/: FindCFITSIO.cmake  FindLIBWCS.cmake  FindWCSLIB.cmake  FindXPA.cmake
gui/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  Commands.cpp  Commands.h  CoordinateMarker.cpp  CoordinateMarker.h  CoordinatePanel.cpp  CoordinatePanel.h  CoordinateTableDialog.cpp  CoordinateTableDialog.h  DropArea.cpp  DropArea.h  FitsToolbar.cpp  FitsToolbar.h  GraphicsScene.cpp  GraphicsScene.h  GraphicsView.cpp  GraphicsView.h  HelpPanel.cpp  HelpPanel.h  MainWindow.cpp  MainWindow.h  MessageBox.cpp  MessageBox.h  PinpointWCS.ui  WcsInfoPanel.cpp  WcsInfoPanel.h  mainwindow.cpp
